# ChangeLog for net-misc/bfgminer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/bfgminer/ChangeLog,v 1.70 2014/09/16 00:39:28 blueness Exp $

*bfgminer-4.7.1 (16 Sep 2014)
*bfgminer-4.8.0 (16 Sep 2014)
*bfgminer-3.10.7 (16 Sep 2014)

  16 Sep 2014; Anthony G. Basile <blueness@gentoo.org> +bfgminer-3.10.7.ebuild,
  +bfgminer-4.7.1.ebuild, +bfgminer-4.8.0.ebuild, -bfgminer-3.10.6.ebuild,
  -bfgminer-4.4.0.ebuild, -bfgminer-4.5.0.ebuild, -bfgminer-4.6.0.ebuild,
  -bfgminer-4.7.0.ebuild, metadata.xml:
  Version bumps, remove older unstable

*bfgminer-4.7.0 (17 Aug 2014)

  17 Aug 2014; Anthony G. Basile <blueness@gentoo.org> +bfgminer-4.7.0.ebuild:
  Version bump

*bfgminer-4.6.0 (03 Aug 2014)

  03 Aug 2014; Anthony G. Basile <blueness@gentoo.org> +bfgminer-4.6.0.ebuild,
  metadata.xml:
  Version bump

*bfgminer-3.10.6 (27 Jul 2014)
*bfgminer-4.5.0 (27 Jul 2014)

  27 Jul 2014; Anthony G. Basile <blueness@gentoo.org> +bfgminer-3.10.6.ebuild,
  +bfgminer-4.5.0.ebuild, metadata.xml:
  Version bump

  23 Jul 2014; Chema Alonso <nimiux@gentoo.org> bfgminer-3.10.5.ebuild:
  Stable for amd64 wrt bug #516646

  22 Jul 2014; Anthony G. Basile <blueness@gentoo.org> bfgminer-3.10.5.ebuild,
  bfgminer-4.4.0.ebuild, metadata.xml:
  Fix bug #517768

  22 Jul 2014; Anthony G. Basile <blueness@gentoo.org> -bfgminer-3.10.1.ebuild,
  -bfgminer-3.10.2.ebuild, -bfgminer-3.10.3.ebuild, -bfgminer-3.10.4.ebuild,
  -bfgminer-3.5.10.ebuild, -bfgminer-3.5.11.ebuild, -bfgminer-3.5.8.ebuild,
  -bfgminer-3.5.9.ebuild, -bfgminer-4.0.0.ebuild, -bfgminer-4.1.0.ebuild,
  -bfgminer-4.2.0.ebuild:
  Remove older unstable versions

  07 Jul 2014; Anthony G. Basile <blueness@gentoo.org> -bfgminer-4.3.0.ebuild:
  Remove 4.3.0 for bug #516000

*bfgminer-3.10.5 (07 Jul 2014)
*bfgminer-4.4.0 (07 Jul 2014)

  07 Jul 2014; Anthony G. Basile <blueness@gentoo.org> +bfgminer-3.10.5.ebuild,
  +bfgminer-4.4.0.ebuild, metadata.xml:
  Version bumps
