@@ -5,28 +5,32 @@ DIST bfgminer-2.5.0.tbz2 6015548 SHA256 81a23270cac2ad49c5ca70f498c1194d245fff6a
 DIST bfgminer-3.10.5.tbz2 1091287 SHA256 224e02979ed27f7cebe47ca7a17fa9a1ecce7680531c3995daade54cc3be2807 SHA512 500745b09ced2102cb7bfee8dbe3e44bf69c3220fff5d2fdc642a1b4c0674f36a1786c1e384ab641dde5b3149713d9b0a4e520cfd50c2cc89710fe54f1315303 WHIRLPOOL 0b4299b56b86cc4633225a321c957ce47fd719f3132c32f34618de2e7b15fc388a39cc3627959207490d7f8fb263942cc3be5a710b9cbe7114988364ba1a43fa
 DIST bfgminer-3.10.7.tbz2 1090760 SHA256 16121ff3ccea4e0e18958abaafdee381a6b8acdee4b761b63b7d1b69a7e2f53e SHA512 ff3d2592fafa52e1a9868e696f78af17132274e8d1ade70077206bbabb18e69235c456b08620e457539ae6f56f4a8e7405e924ae37256c41d780bd975df4ccf9 WHIRLPOOL 12fdd730f260f87727b4a6e1bb7c74e776c974fbb87f2f7002d57567c5173bd18f0ef1fd578f89db33bbc758bf06881aad20de80efde29a4bc975671301c7dc8
 DIST bfgminer-4.7.1.tar.xz 921760 SHA256 51d16bcfd7193c19461ffc69b4d92ebcea80086f378844d067adbb8196489690 SHA512 30800c05980cd6715fc204b0ec58acda48e722e4040e5202a8f8dc18290e17ccc56c4e20df57c3f7e1ed82400b87a3af161a8e3c1c938167a74cf961803e76ff WHIRLPOOL 715cfe000fde2017438d39d52885423280a0fc5c6db233aaaafe2fd3c63fa12640f8438a80b4ffcaec137ce38f0e240cddba90a50aeaf8c397da23c875eee904
+DIST bfgminer-4.7.2.tar.xz 922152 SHA256 b17dfa399b6fa707218dd7e3f70083cdbc9616ef30680425207c50ca590d90eb SHA512 6ad9a425f9f500b3f2f5268ebcef0175bfa10a51e04c1d1865cc3397cb9840f1c3fbafc8d4d39d609b9704a5ea53310e05ecd3aef982af0357b7a037aadf3ed1 WHIRLPOOL c3a0711b189affbe457db014bb841165ffa5e10cef3a0ab840e4ee80b57adc36f113d8c559006fb7f224e6b4b12851ef641b5188d3ac21aa29b93f865f7980c8
 DIST bfgminer-4.8.0.tar.xz 950564 SHA256 ad6fb0c857b8857764779a8f21d8179fd622a25a6c3142453245d34b722bdc57 SHA512 6c6174805786843ece8e7b4ae5f17bc4ce354d6b563f2778f6975039620795fa84ff9c1e1febb6d30e793a51bd2608b92fafbee2375103ab90011f53d45f1dba WHIRLPOOL f3311dd4956c7f6ce99b5f77a6e0bd3523ee72a2f2f845ae4135fc5338aa6c66d4dd509c1a7aa1913077c9b103c3cd6a5c50f4971fd5405613739b8db1735bf0
+DIST bfgminer-4.9.0.tar.xz 981304 SHA256 e406e6584443f5ab49ea936eaab80adb338d0966e0a4862b80434fdaa8e0daa7 SHA512 4221de3ee0a371f03a621955e6a0b11853ec559b677ec56de8870b572bcbf94edaa221b7449ccaf09c2daf56cb1c35463888b5414701aca14ad167d3328ec8a8 WHIRLPOOL 84c69b0409410ba016fd0a07fdc67093a2b0278b4a5cb2493d3a03561d9edacabd369fe8435f4bb9a03f797ba406d3a983387c1cb1a24ffc56fdc8af15d03c9c
 EBUILD bfgminer-2.5.0.ebuild 2762 SHA256 aeae06d88e9c1ddaca68657a411acef4e74fba5453f611c0b98bcbf9a47a4dc0 SHA512 948830b45c74fd6302eaea9c4619257074c7c5f0555f0509e4fab226490729e83ab0050d006b9559509390c04b2713e39362643dfd1ad793e33b61e4340982fb WHIRLPOOL 8c7f35099f39f63c0738db827469827cf8a18edcb8bd8a37830e342a752e98e35b082b65b5267124dc2599ce1e34452146f2971bcd6307e0ed6038541677ddb2
 EBUILD bfgminer-3.10.5.ebuild 3861 SHA256 172db7cb3849b78d7ec1b8d9cf19ae49e45310fbdb56d5df5a3876aa9057bec0 SHA512 3b6b379ab0a246bd6bf3f793e7b7b9dcbf898f5e9403468118078c874a160b873d0ece478eae952c3c24f4781dec1a1e2f3aaae19c76311e6815a0eba30edf5c WHIRLPOOL abfdf9722b461efc2c36772e6eb0005bf3c3da0124616f860442ace3657443c01ec71fdcf111c6959747362d8714842f83e0ca6db3d0ad2bbc26f62e5cf7f455
 EBUILD bfgminer-3.10.7.ebuild 3866 SHA256 79838ccc92d06d907632dbdee3b914dc6d5e015e917357adb25f669ef30da5be SHA512 f75305fab143a601146b788edb8d87534fc1d199abb8412dc022dd5607a4650711fc01720ba0e5315edd394151db62c0162674d583bba8cf66885f832e2d245d WHIRLPOOL 2bbb80a588c00af0678e421dc72842fd665fbc1197affea107867d629632a5313b6228ebfe33336999286691d44506edf29305e9ed57ef20335dcfc04920a7cf
 EBUILD bfgminer-4.7.1.ebuild 4401 SHA256 6c3ab3fef54dc22147a5f2ad744fc493809e6ddafd094baea5a1ec382c88e26d SHA512 95be05e987549392a4c4d7ccd2382189ed393c19960d08a4b1c013b59ef8dc440f1a1640aeb3699ac59ed7f4d80e46836523cb4fc6f9769222f1350538ff7763 WHIRLPOOL 45adb6012aaec22c6592eef8dd1bdd999ba571dcc52b4801ffc03b372a4de6f9f0224fa8f98b9a4b95948be5bbd6750e5799b4354a9b6dbb24f667dc5ed5c166
+EBUILD bfgminer-4.7.2.ebuild 4399 SHA256 6323df138c5ef6cf683e8fc91037f88198758f07308767499fd75acbf64f8eb3 SHA512 f382e7f964320f97ec812326fc7194ef92fcc729032e459849daf6becb99d0f58eaae33b8aca4a4b09a67dc109a3eeada9c4da44786b7f0c32fc92db048b8946 WHIRLPOOL 73c9a2d3d3e50c0a0b62dccc7f5ec309f5df24243cd9a2d0023249e83a55614c763d6c5e33b2e1c1691a5a191932e0992a529b3bc48e3c35cbe59aac0235cb54
 EBUILD bfgminer-4.8.0.ebuild 4469 SHA256 9deffe18ff64ec6030ebcc30ec16c5ba973aa01f7e900bc2cbe99fff35e28197 SHA512 daaa23a9092bf8d3e1f4bd66cdaafbfb67566cea8ed9b5ef8d68d486e0d993f1f7253f072f25cd94ba2162c3e4b22e2228e30c700e00efb4458d83fde35f3665 WHIRLPOOL ac39e47d355a785341f485a9510a8345cf79c7eaa5b2b79646bd60af72142f976d0ec8a3c2d11e811ada83fea9c7a18e86c4a6492936bfdd2590093b922bfcca
-MISC ChangeLog 16247 SHA256 ecf6b73dc54cef9b5414ea0e41ab3bec7cece1ff700a184a544a657290572903 SHA512 24f697cbbe5b1ef632f30c0f465c1f192126eba3ff0b17705f79461583bfa02bc3f04add608b367a3e6447709d98fd2c98ad50700e762ac63f6b9818748b66a3 WHIRLPOOL 06d71476cbc90f9ef0c0971147a7b306b3120879ce3a55c862bd5c6578fc55ce0ac16cf029d9b493f321807dd1b778bc9c2650cc8c274ce0671fdb4e72ec3c39
+EBUILD bfgminer-4.9.0.ebuild 4481 SHA256 5fb58e799211ec8f2bc78dae97dc910eacef468bd29c1b488a2b74b8131f91c7 SHA512 31b4351d3456c4b06e15e71d5f0026a22e58c313a95a6c1fcd0de5577d8421884b048730c3d3f4f655b839282e05b41900c9408b09684683c1f99a843a2ef34c WHIRLPOOL 772bbec71360e974bd4eb60ae0ae7e4b6507b10f359e7982d5c410b7194163aea59b5288b235c764ee9395d52377a4e9fff48e9c9a34fb76bda14af48c49a7ee
+MISC ChangeLog 16430 SHA256 1f5e699e18b3106b3c92cd0fe49fa9d1f8409b0d8c4878c6e95ed3fc76488a08 SHA512 d8782907f153f469245661d69658cbbd889fd15bfcaa1b67093367098b4fe58099c102682a8534738a0624e0af8d15df0ea4225f3b586a99176e65e983dc5685 WHIRLPOOL 94d7fdc7ea10c2b869841563cb7d1341a099f7cfa34b46678868abd7ed4053c967cc7a7415ed8090baf489977331d3a61d7bc84783ef5cdb274d686b16f99e28
 MISC metadata.xml 3823 SHA256 a79c0d5fd4a3129fa9a9ee14d031f3705983e3244c6b7d8489975c449fd039fa SHA512 f23f2f46809f707443add18ecc3da11ae5d9ad1725c36faac3a2cacf8ef8b3ecfb849d1beb916e3464274c86aa527bbf7dc07a37be1a10340932e75737ef2b09 WHIRLPOOL 51a38309794855a9c6e079bc989eedac98b54bac55be116af3c90fd2f64c301468ce24ad6bf86d47a2558e6d30960d6b9ee6c3e5d4fa3bc02339d7f4346e7c3f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJUF4dqAAoJEJOE+m71LUu6O34P/1h8oHHaDNT3j2J++VINufTs
-vJysB5h/DNEo/qjKnlBZGbwS0gyiAESbPE0lwrY4mmQmnv7AbTBRKj5eKe0ixHrY
-A+5ssmYFiLWKarrjzv+vk/gIOGTDnQAMrImajJvkPUaKNRq7Ps7BHTit+xbYVBCF
-XEKgOHClHKMZu+EpfgVG1nbhCt6TTSqlEyuzpcJ2F3PidfNXRrZh1RCWFwiz8nNR
-dEPNjz3nj4hbDNbIqYQXhOFGcoXkVXEYfXH9+ZFdmTj4Xoj2cts7yuhQjpyzCxV6
-bKKlgReSZNBV/zt/NgGTc7sOxW/6iXQ8gZafHTzRS8CWz8Y6q3nrg+YL4cxZvvRA
-MoAkkuIvGyW9FwO7f4GbN0/ULZtadkb0FwqMN/5uNkEiNT+ZKxgMeDqEUEog9uuo
-gDgkM6/Pt98m/FwOanRBItT8zwAqqRNC/iVYiTmdrAogfd1mPYE/Ih0twMb8uVaL
-lQzQQacKTFJwkDynsizYFBVKcJPXuZK3a0tZG+FhhhkTc34z5cypglvpFqx/Yvd1
-NPjdAl7O7/jwn+QnMvoNpTwKauHMk0T1Q36f0pLHPr9Y0nbZOHmlczxxdaFrzSlG
-Ks748jEDW/wp/7SORk3COREoeM2Qt4aMRkeJ0wxasIvTPn+8yGm2qV6otNjCGCoo
-EbmOh9aOHVqrBGyyGEfl
-=x08K
+iQIcBAEBCAAGBQJUMTIHAAoJEJOE+m71LUu6JWMP/3DetRKbLMhvDBOkd38Xg29x
+EYjUQHbl9pIzLTxX7qDkb70sy3Iv6NGiMCWyAxPg8EfTCS56cQgtkybNZRSWooR/
+VS06l70e+AjB94J6Tol45kdepYuRYDmORpaxStBTBttepWYkZGSmc6dMlPPz0fdS
+ebLnF/Wu7qe/jZtMb2tm233ty8Yqh99+eQJeA/QIBVwZWQdcMIrA7VhAO+dWMXor
+pVKeeQH/0QPcBbRMlYwzad82hkgm6yofzhTrFJuxKQjwoSBipBPF3uuSJiW/ZD7Y
+v+dZ0OAqgBuwfl0T6R3d23mMBqGFSRCVdeNMZBIBcEzRt+Qfnf5ewXWKbGrXZS+E
+mt65gEcD6PD5JpWCkPA9PPz4Yg/3WF1cNTvc/riAVWDwx0o3k4/4UEI7krZDOcu4
+KxaT4eAvlBxKoMrzNAgjJYvNgORvjlzJgvgAMOdEUuZHt7lhPoWDVExny2L3/gtW
+eRfwJLfWzgWMoiaPaRqOCXrddSI/5DcLWXpxbvR0GGB+tgcVbavUX8YgbqQLVavI
++YHOniW+wfEageV5xfLVH2Sca/oJe2Syd7oYXNMA6CwjP7z8welIGJDpMKOb9Sad
+6iJ24G0MKfjqPjx2PNfBp3aCEaozv7Fg2LGGv7gBuwSyIilZqbdB3s9xTvaQas5q
+kHi/sW1CVFza09r2okPr
+=ItDw
 -----END PGP SIGNATURE-----
